prevent overflow of the display

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
     padding: 24px 8px;
     font-size: 20px;
     height: calc(24px * 3);
+    overflow: hidden;
 }
 
 /* buttons */
